--- a/assets/modules/mytinytodo/lib/themes/default/style.css
+++ b/assets/modules/mytinytodo/lib/themes/default/style.css
@@ -7,7 +7,7 @@
 
 html { height:100%; overflow-y:scroll; }
 body { margin:0px; padding:0px;  height:100%; min-height:100%; background-color:#fff; font-family:arial; font-size:10pt; }
-#wrapper { margin:0px auto; max-width:950px;  height:100%; }
+#wrapper { margin:0px auto; max-width:100%;  height:100%; }
 #container { height:auto !important;height:100%;min-height:100%;    }
 #mtt_body { padding:8px; padding-bottom:16px; }
 
